azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.18.4.5664",
      "templateHash": "11843157828774843057"
    }
  },
  "parameters": {
    "workspaceName": {
      "type": "string",
      "metadata": {
        "description": "Specifies the name of the Azure Machine Learning workspace."
      }
    },
    "location": {
      "type": "string",
      "defaultValue":"francecentral",
      "metadata": {
        "description": "Specifies the location for workspace."
      }
    },
    "identityType": {
      "type": "string",
      "defaultValue": "systemAssigned",
      "allowedValues": [
        "systemAssigned",
        "userAssigned",
        "systemAssigned,userAssigned"
      ],
      "metadata": {
        "description": "Specifies the identity type of the Azure Machine Learning workspace."
      }
    },
    "primaryUserAssignedIdentityResourceGroup": {
      "type": "string",
      "defaultValue": "[resourceGroup().name]",
      "metadata": {
        "description": "Specifies the resource group of user assigned identity that represents the Azure Machine Learing workspace."
      }
    },
    "primaryUserAssignedIdentityName": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "Specifies the name of user assigned identity that represents the Azure Machine Learing    workspace."
      }
    },
    "cmkUserAssignedIdentityResourceGroup": {
      "type": "string",
      "defaultValue": "[resourceGroup().name]",
      "metadata": {
        "description": "Specifies the resource group of user assigned identity that needs to be used to access the key for encryption."
      }
    },
    "cmkUserAssignedIdentityName": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "Specifies the name of user assigned identity that needs to be used to access the key for encryption."
      }
    },
    "tagValues": {
      "type": "object",
      "defaultValue": {},
      "metadata": {
        "description": "Tags for workspace, will also be populated if provisioning new dependent resources."
      }
    },
    "storageAccountOption": {
      "type": "string",
      "defaultValue": "new",
      "allowedValues": [
        "new",
        "existing"
      ],
      "metadata": {
        "description": "Determines whether or not a new storage should be provisioned."
      }
    },
    "cognitiveServiceName": {
      "type": "string",
      "defaultValue": "[format('{0}oai{1}', replace(resourceGroup().name,'-',''), substring(uniqueString(resourceGroup().id, parameters('workspaceName')),0,4))]",
      "metadata": {
        "description": "Name of the Azure OpenAI account."
      }
    },
    "aoaiSku": {
      "type": "string",
      "defaultValue": "S0",
      "metadata": {
        "description": "SKU of the Azure OpenAI account."
      }
    },
    "storageAccountName": {
      "type": "string",
      "defaultValue": "[format('{0}sa{1}', replace(resourceGroup().name,'-',''), substring(uniqueString(resourceGroup().id, parameters('workspaceName')),0,4))]",
      "metadata": {
        "description": "Name of the storage account."
      }
    },
    "storageAccountType": {
      "type": "string",
      "defaultValue": "Standard_LRS",
      "allowedValues": [
        "Standard_LRS",
        "Standard_GRS",
        "Standard_RAGRS",
        "Standard_ZRS",
        "Standard_GZRS",
        "Standard_RAGZRS"
      ]
    },
    "storageAccountBehindVNet": {
      "type": "string",
      "defaultValue": "false",
      "allowedValues": [
        "true",
        "false"
      ],
      "metadata": {
        "description": "Determines whether or not to put the storage account behind VNet"
      }
    },
    "storageAccountResourceGroupName": {
      "type": "string",
      "defaultValue": "[resourceGroup().name]",
      "metadata": {
        "description": "Resource group name of the storage account if using existing one"
      }
    },
    "keyVaultOption": {
      "type": "string",
      "defaultValue": "new",
      "allowedValues": [
        "new",
        "existing"
      ],
      "metadata": {
        "description": "Determines whether or not a new key vault should be provisioned."
      }
    },
    "keyVaultName": {
      "type": "string",
      "defaultValue": "[format('{0}kv{1}', replace(resourceGroup().name,'-',''), substring(uniqueString(resourceGroup().id, parameters('workspaceName')),0,4))]",
      "metadata": {
        "description": "Name of the key vault."
      }
    },
    "keyVaultBehindVNet": {
      "type": "string",
      "defaultValue": "false",
      "allowedValues": [
        "true",
        "false"
      ],
      "metadata": {
        "description": "Determines whether or not to put the storage account behind VNet"
      }
    },
    "keyVaultResourceGroupName": {
      "type": "string",
      "defaultValue": "[resourceGroup().name]",
      "metadata": {
        "description": "Resource group name of the key vault if using existing one"
      }
    },
    "applicationInsightsOption": {
      "type": "string",
      "defaultValue": "new",
      "allowedValues": [
        "new",
        "existing"
      ],
      "metadata": {
        "description": "Determines whether or not new ApplicationInsights should be provisioned."
      }
    },
    "applicationInsightsName": {
      "type": "string",
      "defaultValue": "[format('ai{0}', uniqueString(resourceGroup().id, parameters('workspaceName')))]",
      "metadata": {
        "description": "Name of ApplicationInsights."
      }
    },
    "applicationInsightsResourceGroupName": {
      "type": "string",
      "defaultValue": "[resourceGroup().name]",
      "metadata": {
        "description": "Resource group name of the application insights if using existing one."
      }
    },
    "containerRegistryOption": {
      "type": "string",
      "defaultValue": "none",
      "allowedValues": [
        "new",
        "existing",
        "none"
      ],
      "metadata": {
        "description": "Determines whether or not a new container registry should be provisioned."
      }
    },
    "containerRegistryName": {
      "type": "string",
      "defaultValue": "[format('cr{0}', uniqueString(resourceGroup().id, parameters('workspaceName')))]",
      "metadata": {
        "description": "The container registry bind to the workspace."
      }
    },
    "containerRegistrySku": {
      "type": "string",
      "defaultValue": "Standard",
      "allowedValues": [
        "Basic",
        "Standard",
        "Premium"
      ]
    },
    "containerRegistryResourceGroupName": {
      "type": "string",
      "defaultValue": "[resourceGroup().name]",
      "metadata": {
        "description": "Resource group name of the container registry if using existing one."
      }
    },
    "containerRegistryBehindVNet": {
      "type": "string",
      "defaultValue": "false",
      "allowedValues": [
        "true",
        "false"
      ],
      "metadata": {
        "description": "Determines whether or not to put container registry behind VNet."
      }
    },

    "privateAZFWIP": {
      "type": "string",
      "defaultValue": "10.5.0.4",
      "metadata": {
        "description": "Private IP of the Azure Firewall"
      }
    },
    "hubVNetName": {
      "type": "string",
      "defaultValue": "vnet-aml-hub",
      "metadata": {
        "description": "Name of the Hub VNET"
      }
    },
    "hubVNetResourceGroupName": {
      "type": "string",
      "defaultValue": "aml-hub",
      "metadata": {
        "description": "Resource Group of the Hub Vnet"
      }
    },
    "vnetOption": {
      "type": "string",
      "defaultValue": "new",
      "allowedValues": [
        "new",
        "existing",
        "none"
      ],
      "metadata": {
        "description": "Determines whether or not a new VNet should be provisioned."
      }
    },
    "vnetName": {
      "type": "string",
      "defaultValue": "aml-private-aml-vnet",
      "metadata": {
        "description": "Name of the VNet"
      }
    },
    "vnetResourceGroupName": {
      "type": "string",
      "defaultValue": "[resourceGroup().name]",
      "metadata": {
        "description": "Resource group name of the VNET if using existing one."
      }
    },
    "vnetLocation": {
      "type": "string",
      "defaultValue": "[parameters('location')]",
      "metadata": {
        "description": "Required if existing VNET location differs from workspace location"
      }
    },
    "addressPrefixes": {
      "type": "array",
      "defaultValue": [
        "10.0.0.0/16"
      ],
      "metadata": {
        "description": "Address prefix of the virtual network"
      }
    },
    "subnetOption": {
      "type": "string",
      "defaultValue": "new",
      "allowedValues": [
        "new",
        "existing",
        "none"
      ],
      "metadata": {
        "description": "Determines whether or not a new subnets should be provisioned."
      }
    },
    "subnetComputeName": {
      "type": "string",
      "defaultValue": "aml_compute",
      "metadata": {
        "description": "Name of the subnet for Compute Instance"
      }
    },
    "subnetComputePrefix": {
      "type": "string",
      "defaultValue": "[cidrSubnet(first(parameters('addressPrefixes')), 24, 0)]",
      "metadata": {
        "description": "Subnet Compute instance prefix of the virtual network"
      }
    },
    "subnetPEName": {
      "type": "string",
      "defaultValue": "pe",
      "metadata": {
        "description": "Name of the subnet for Private Endpoints"
      }
    },
    "subnetPEPrefix": {
      "type": "string",
      "defaultValue": "[cidrSubnet(first(parameters('addressPrefixes')), 24, 1)]",
      "metadata": {
        "description": "Subnet private endpoint prefix of the virtual network"
      }
    },
    "confidential_data": {
      "type": "bool",
      "defaultValue": true,
      "allowedValues": [
        false,
        true
      ],
      "metadata": {
        "description": "Specifies that the Azure Machine Learning workspace holds highly confidential data."
      }
    },
    "encryption_status": {
      "type": "string",
      "defaultValue": "Disabled",
      "allowedValues": [
        "Enabled",
        "Disabled"
      ],
      "metadata": {
        "description": "Specifies if the Azure Machine Learning workspace should be encrypted with customer managed key."
      }
    },
    "cmk_keyvault": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "Specifies the customer managed keyVault arm id. Required when encryption is enabled"
      }
    },
    "resource_cmk_uri": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "Specifies if the customer managed keyvault key uri. Required when encryption is enabled"
      }
    },
    "privateEndpointType": {
      "type": "string",
      "defaultValue": "AutoApproval",
      "allowedValues": [
        "AutoApproval",
        "ManualApproval",
        "none"
      ]
    }
  },
  "variables": {
    "tenantId": "[subscription().tenantId]",
    "storageAccountId": "[resourceId(parameters('storageAccountResourceGroupName'), 'Microsoft.Storage/storageAccounts', parameters('storageAccountName'))]",
    "keyVaultId": "[resourceId(parameters('keyVaultResourceGroupName'), 'Microsoft.KeyVault/vaults', parameters('keyVaultName'))]",
    "containerRegistryId": "[resourceId(parameters('containerRegistryResourceGroupName'), 'Microsoft.ContainerRegistry/registries', parameters('containerRegistryName'))]",
    "applicationInsightId": "[resourceId(parameters('applicationInsightsResourceGroupName'), 'Microsoft.Insights/components', parameters('applicationInsightsName'))]",
    "vnetId": "[resourceId(parameters('vnetResourceGroupName'), 'Microsoft.Network/virtualNetworks', parameters('vnetName'))]",
    "subnetComputeId": "[resourceId(parameters('vnetResourceGroupName'), 'Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('subnetComputeName'))]",
    "subnetPEId": "[resourceId(parameters('vnetResourceGroupName'), 'Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('subnetPEName'))]",
    "hubVNetId": "[resourceId(parameters('hubVNetResourceGroupName'), 'Microsoft.Network/virtualNetworks', parameters('hubVNetName'))]",
    "privateDnsZoneName": {
      "azureusgovernment": "privatelink.api.ml.azure.us",
      "azurechinacloud": "privatelink.api.ml.azure.cn",
      "azurecloud": "privatelink.api.azureml.ms"
    },
    "privateBlobDnsZoneName": {
      "azureusgovernment": "privatelink.blob.core.usgovcloudapi.net",
      "azurechinacloud": "privatelink.blob.core.usgovcloudapi.net",
      "azurecloud": "privatelink.blob.core.windows.net"
    },
    "privateFileDnsZoneName": {
      "azureusgovernment": "privatelink.file.core.usgovcloudapi.net",
      "azurechinacloud": "privatelink.file.core.usgovcloudapi.net",
      "azurecloud": "privatelink.file.core.windows.net"
    },
    "privateKVDnsZoneName": {
      "azureusgovernment": "privatelink.vaultcore.usgovcloudapi.net",
      "azurechinacloud": "privatelink.vaultcore.azure.cn",
      "azurecloud": "privatelink.vaultcore.azure.net"
    },
    "privateAznbDnsZoneName": {
      "azureusgovernment": "privatelink.notebooks.usgovcloudapi.net",
      "azurecloud": "privatelink.notebooks.azure.net",
      "azurechinacloud": "privatelink.notebooks.chinacloudapi.cn"
    },
    "privateAOAIDnsZoneName": {
      "azureusgovernment": "privatelink.cognitiveservices.azure.us",
      "azurecloud": "privatelink.openai.azure.com",
      "azurechinacloud": ""
    },
    "enablePE": "[not(equals(parameters('privateEndpointType'), 'none'))]",
    "networkSecurityGroupName" : "[format('{0}-nsg', resourceGroup().name)]",
    "routeTableName": "[format('{0}-rt', resourceGroup().name)]",
    "networkRuleSetBehindVNet": {
      "defaultAction": "deny",
      "virtualNetworkRules": [
        {
          "action": "Allow",
          "id": "[variables('subnetComputeId')]"
        },
        {
          "action": "Allow",
          "id": "[variables('subnetPEId')]"
        }
      ]
    },
    "serviceEndpointsAll": [
      {
        "service": "Microsoft.Storage"
      }
    ],
    "serviceEndpointsAzureChinaCloud": [
      {
        "service": "Microsoft.Storage"
      }
    ],
    "privateEndpointSettings": {
      "name": "[format('{0}-PrivateEndpoint', parameters('workspaceName'))]",
      "properties": {
        "privateLinkServiceId": "[resourceId('Microsoft.MachineLearningServices/workspaces', parameters('workspaceName'))]",
        "groupIds": [
          "amlworkspace"
        ]
      }
    },
    "privateBlobEndpointSettings": {
      "name": "[format('{0}-PrivateEndpoint-blob', parameters('workspaceName'))]",
      "properties": {
        "privateLinkServiceId": "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccountName'))]",
        "groupIds": [
          "blob"
        ]
      }
    },
    "privateFileEndpointSettings": {
      "name": "[format('{0}-PrivateEndpoint-file', parameters('workspaceName'))]",
      "properties": {
        "privateLinkServiceId": "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccountName'))]",
        "groupIds": [
          "file"
        ]
      }
    },
    "privateKVEndpointSettings": {
      "name": "[format('{0}-PrivateEndpoint-kv', parameters('workspaceName'))]",
      "properties": {
        "privateLinkServiceId": "[resourceId('Microsoft.KeyVault/vaults', parameters('keyVaultName'))]",
        "groupIds": [
          "vault"
        ]
      }
    },
    "privateAOAIEndpointSettings": {
      "name": "[format('{0}-PrivateEndpoint-aoai', parameters('workspaceName'))]",
      "properties": {
        "privateLinkServiceId": "[resourceId('Microsoft.CognitiveServices/accounts', parameters('cognitiveServiceName'))]",
        "groupIds": [
          "account"
        ]
      }
    },
    "defaultPEConnections": "[array(variables('privateEndpointSettings'))]",
    "blobPEConnections": "[array(variables('privateBlobEndpointSettings'))]",
    "filePEConnections": "[array(variables('privateFileEndpointSettings'))]",
    "KVPEConnections": "[array(variables('privateKVEndpointSettings'))]",
    "AOAIConnections": "[array(variables('privateAOAIEndpointSettings'))]",
    "userAssignedIdentities": "[union(variables('userAssignedIdentitiesPrimary'), variables('userAssignedIdentitiesCmk'))]",
    "userAssignedIdentityPrimary": {
      "[format('{0}', variables('primaryUserAssignedIdentity'))]": {}
    },
    "userAssignedIdentitiesPrimary": "[if(not(equals(parameters('primaryUserAssignedIdentityName'), '')), variables('userAssignedIdentityPrimary'), json('{}'))]",
    "primaryUserAssignedIdentity": "[resourceId(parameters('primaryUserAssignedIdentityResourceGroup'), 'Microsoft.ManagedIdentity/userAssignedIdentities', parameters('primaryUserAssignedIdentityName'))]",
    "userAssignedIdentityCmk": {
      "[format('{0}', variables('cmkUserAssignedIdentity'))]": {}
    },
    "userAssignedIdentitiesCmk": "[if(not(equals(parameters('cmkUserAssignedIdentityName'), '')), variables('userAssignedIdentityCmk'), json('{}'))]",
    "cmkUserAssignedIdentity": "[resourceId(parameters('cmkUserAssignedIdentityResourceGroup'), 'Microsoft.ManagedIdentity/userAssignedIdentities', parameters('cmkUserAssignedIdentityName'))]",
    "encryptionUserAssignedIdentity": {
      "userAssignedIdentity": "[variables('cmkUserAssignedIdentity')]"
    },
    "encryptionIdentity": "[if(not(equals(parameters('cmkUserAssignedIdentityName'), '')), variables('encryptionUserAssignedIdentity'), json('{}'))]",
    "appInsightsLocation": "[if(or(or(or(equals(parameters('location'), 'westcentralus'), equals(parameters('location'), 'eastus2euap')), equals(parameters('location'), 'centraluseuap')), equals(parameters('location'), 'westus3')), 'southcentralus', if(equals(parameters('location'), 'canadaeast'), 'canadacentral', parameters('location')))]"
  },
  "resources": [
    {
      "type": "Microsoft.Network/routeTables",
      "name": "[variables('routeTableName')]",
      "apiVersion": "2015-06-15",
      "location": "[parameters('location')]",
      "properties": {
        "routes": [
          {
            "name": "ToAZureFirewall",
            "properties": {
              "addressPrefix": "0.0.0.0/0",
              "nextHopType": "VirtualAppliance",
              "nextHopIpAddress": "[parameters('privateAZFWIP')]"
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('networkSecurityGroupName')]",
      "location": "[parameters('location')]",
      "apiVersion": "2020-05-01",
      "properties": {
        "securityRules": [
          {
            "name": "AADOutbound",
            "properties": {
              "description": "Allows AAD connectivity",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRanges": ["80","443"],
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "AzureActiveDirectory",
              "access": "Allow",
              "priority": 100,
              "direction": "Outbound"
            }
          },
          {
            "name": "AML-TCP",
            "properties": {
              "description": "AML TCP Connectivity",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRanges": ["443","8787", "18881"],
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "AzureMachineLearning",
              "access": "Allow",
              "priority": 110,
              "direction": "Outbound"
            }
          },
          {
            "name": "AML-UDP",
            "properties": {
              "description": "AML UDP Connectivity",
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRanges": ["5831"],
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "AzureMachineLearning",
              "access": "Allow",
              "priority": 120,
              "direction": "Outbound"
            }
          },
          {
            "name": "BatchNodeManagement",
            "properties": {
              "description": "Batch Node Management Connectivity",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRanges": ["443"],
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "BatchNodeManagement.FranceCentral",
              "access": "Allow",
              "priority": 130,
              "direction": "Outbound"
            }
          },
          {
            "name": "ARM",
            "properties": {
              "description": "ARM Connectivity",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRanges": ["443"],
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "AzureResourceManager",
              "access": "Allow",
              "priority": 140,
              "direction": "Outbound"
            }
          },
          {
            "name": "Storage",
            "properties": {
              "description": "Storage Connectivity",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRanges": ["443"],
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Storage.FranceCentral",
              "access": "Allow",
              "priority": 150,
              "direction": "Outbound"
            }
          },
          {
            "name": "FrontDoor",
            "properties": {
              "description": "Frontdoor Connectivity",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRanges": ["443"],
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "AzureFrontDoor.Frontend",
              "access": "Allow",
              "priority": 160,
              "direction": "Outbound"
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
      ]
    },
    {
      "condition": "[equals(parameters('vnetOption'), 'new')]",
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2022-05-01",
      "name": "[parameters('vnetName')]",
      "location": "[parameters('location')]",
      "tags": "[parameters('tagValues')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": "[parameters('addressPrefixes')]"
        },
        "enableDdosProtection": false,
        "enableVmProtection": false
      }
    },
    {
      "condition": "[equals(parameters('subnetOption'), 'new')]",
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2022-05-01",
      "name": "[format('{0}/{1}', parameters('vnetName'), parameters('subnetComputeName'))]",
      "properties": {
        "addressPrefix": "[parameters('subnetComputePrefix')]",
        "privateLinkServiceNetworkPolicies": "Enabled",
        "serviceEndpoints": "[if(equals(toLower(environment().name), 'azurechinacloud'), variables('serviceEndpointsAzureChinaCloud'), variables('serviceEndpointsAll'))]",
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]",
        "[resourceId('Microsoft.Network/routeTables', variables('routeTableName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/virtualNetworkPeerings', format('{0}-to-hub',parameters('hubVNetName')))]",
        "[resourceId(parameters('hubVNetResourceGroupName'),'Microsoft.Network/virtualNetworks/virtualNetworkPeerings', format('hub-to-{0}', parameters('vnetName')))]"
       
      ]
    },
    {
      "condition": "[equals(parameters('subnetOption'), 'new')]",
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2022-05-01",
      "name": "[format('{0}/{1}', parameters('vnetName'), parameters('subnetPEName'))]",
      "properties": {
        "addressPrefix": "[parameters('subnetPEPrefix')]",
        "privateLinkServiceNetworkPolicies": "Enabled",
        "serviceEndpoints": "[if(equals(toLower(environment().name), 'azurechinacloud'), variables('serviceEndpointsAzureChinaCloud'), variables('serviceEndpointsAll'))]",
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]",
        "[resourceId(parameters('hubVNetResourceGroupName'),'Microsoft.Network/virtualNetworks/virtualNetworkPeerings', format('hub-to-{0}', parameters('vnetName')))]",
        "[resourceId('Microsoft.Network/virtualNetworks/virtualNetworkPeerings', format('{0}-to-hub',parameters('hubVNetName')))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('subnetComputeName'))]",
        "[resourceId('Microsoft.Network/routeTables', variables('routeTableName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "apiVersion": "2020-05-01",
      "name": "[format('{0}/{1}', parameters('vnetName'), format('{0}-to-hub',parameters('hubVNetName')))]",
      "properties": {
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true,
        "allowGatewayTransit": false,
        "useRemoteGateways": false,
        "remoteVirtualNetwork": {
          "id": "[variables('hubVNetId')]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
      ]
    },
    {
      "condition": "[equals(parameters('storageAccountOption'), 'new')]",
      "type": "Microsoft.Storage/storageAccounts",
      "apiVersion": "2022-05-01",
      "name": "[parameters('storageAccountName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "[parameters('storageAccountType')]"
      },
      "kind": "StorageV2",
      "tags": "[parameters('tagValues')]",
      "properties": {
        "encryption": {
          "services": {
            "blob": {
              "enabled": true
            },
            "file": {
              "enabled": true
            }
          },
          "keySource": "Microsoft.Storage"
        },
        "supportsHttpsTrafficOnly": true,
        "minimumTlsVersion": "TLS1_2",
        "allowBlobPublicAccess": false,
        "networkAcls": "[if(equals(parameters('storageAccountBehindVNet'), 'true'), variables('networkRuleSetBehindVNet'), json('null'))]"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('subnetPEName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('subnetComputeName'))]"
      ]
    },
    {
      "condition": "[equals(parameters('keyVaultOption'), 'new')]",
      "type": "Microsoft.KeyVault/vaults",
      "apiVersion": "2022-07-01",
      "name": "[parameters('keyVaultName')]",
      "location": "[parameters('location')]",
      "tags": "[parameters('tagValues')]",
      "properties": {
        "tenantId": "[variables('tenantId')]",
        "sku": {
          "name": "standard",
          "family": "A"
        },
        "accessPolicies": [],
        "networkAcls": "[if(equals(parameters('keyVaultBehindVNet'), 'true'), variables('networkRuleSetBehindVNet'), json('null'))]"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('subnetPEName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('subnetComputeName'))]"
      ]
    },
    {
      "condition": "[equals(parameters('containerRegistryOption'), 'new')]",
      "type": "Microsoft.ContainerRegistry/registries",
      "apiVersion": "2022-02-01-preview",
      "name": "[parameters('containerRegistryName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "[parameters('containerRegistrySku')]"
      },
      "tags": "[parameters('tagValues')]",
      "properties": {
        "adminUserEnabled": true,
        "networkRuleSet": "[if(equals(parameters('containerRegistryBehindVNet'), 'true'), variables('networkRuleSetBehindVNet'), json('null'))]"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('subnetPEName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('subnetComputeName'))]"
      ]
    },
    {
      "condition": "[equals(parameters('applicationInsightsOption'), 'new')]",
      "type": "Microsoft.Insights/components",
      "apiVersion": "2020-02-02",
      "name": "[parameters('applicationInsightsName')]",
      "location": "[variables('appInsightsLocation')]",
      "kind": "web",
      "tags": "[parameters('tagValues')]",
      "properties": {
        "Application_Type": "web"
      }
    },
    {
      "type": "Microsoft.CognitiveServices/accounts",
      "apiVersion": "2021-10-01",
      "name": "[parameters('cognitiveServiceName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "[parameters('aoaiSku')]"
      },
      "kind": "OpenAI",
      "properties": {
        "apiProperties": {
          "statisticsEnabled": false
        }
      }
    },
    {
      "type": "Microsoft.MachineLearningServices/workspaces",
      "apiVersion": "2022-10-01",
      "name": "[parameters('workspaceName')]",
      "location": "[parameters('location')]",
      "identity": {
        "type": "[parameters('identityType')]",
        "userAssignedIdentities": "[if(or(equals(parameters('identityType'), 'userAssigned'), equals(parameters('identityType'), 'systemAssigned,userAssigned')), variables('userAssignedIdentities'), json('null'))]"
      },
      "tags": "[parameters('tagValues')]",
      "properties": {
        "friendlyName": "[parameters('workspaceName')]",
        "storageAccount": "[variables('storageAccountId')]",
        "keyVault": "[variables('keyVaultId')]",
        "applicationInsights": "[variables('applicationInsightId')]",
        "containerRegistry": "[if(not(equals(parameters('containerRegistryOption'), 'none')), variables('containerRegistryId'), json('null'))]",
        "primaryUserAssignedIdentity": "[if(equals(parameters('identityType'), 'userAssigned'), variables('primaryUserAssignedIdentity'), json('null'))]",
        "encryption": {
          "status": "[parameters('encryption_status')]",
          "identity": "[variables('encryptionIdentity')]",
          "keyVaultProperties": {
            "keyVaultArmId": "[parameters('cmk_keyvault')]",
            "keyIdentifier": "[parameters('resource_cmk_uri')]"
          }
        },
        "hbiWorkspace": "[parameters('confidential_data')]",
        "publicNetworkAccess": "Disabled"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Insights/components', parameters('applicationInsightsName'))]",
        "[resourceId('Microsoft.ContainerRegistry/registries', parameters('containerRegistryName'))]",
        "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccountName'))]",
        "[resourceId('Microsoft.KeyVault/vaults', parameters('keyVaultName'))]"
      ]
    },
    {
      "condition": "[variables('enablePE')]",
      "type": "Microsoft.Network/privateEndpoints",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('subnetPEName'))]",
        "[resourceId('Microsoft.MachineLearningServices/workspaces', parameters('workspaceName'))]"
      ],
      "apiVersion": "2022-05-01",
      "name": "[format('{0}-PrivateEndpoint', parameters('workspaceName'))]",
      "location": "[parameters('vnetLocation')]",
      "tags": "[parameters('tagValues')]",
      "properties": {
        "privateLinkServiceConnections": "[if(equals(parameters('privateEndpointType'), 'AutoApproval'), variables('defaultPEConnections'), json('null'))]",
        "manualPrivateLinkServiceConnections": "[if(equals(parameters('privateEndpointType'), 'ManualApproval'), variables('defaultPEConnections'), json('null'))]",
        "subnet": {
          "id": "[variables('subnetPEId')]"
        }
      }
    },
    {
      "condition": "[variables('enablePE')]",
      "type": "Microsoft.Network/privateEndpoints",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('subnetPEName'))]",
        "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccountName'))]"
      ],
      "apiVersion": "2022-05-01",
      "name": "[format('{0}-PrivateEndpoint-blob', parameters('workspaceName'))]",
      "location": "[parameters('vnetLocation')]",
      "tags": "[parameters('tagValues')]",
      "properties": {
        "privateLinkServiceConnections": "[if(equals(parameters('privateEndpointType'), 'AutoApproval'), variables('blobPEConnections'), json('null'))]",
        "manualPrivateLinkServiceConnections": "[if(equals(parameters('privateEndpointType'), 'ManualApproval'), variables('blobPEConnections'), json('null'))]",
        "subnet": {
          "id": "[variables('subnetPEId')]"
        }
      }
    },
      {
      "condition": "[variables('enablePE')]",
      "type": "Microsoft.Network/privateEndpoints",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('subnetPEName'))]",
        "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccountName'))]"
      ],
      "apiVersion": "2022-05-01",
      "name": "[format('{0}-PrivateEndpoint-file', parameters('workspaceName'))]",
      "location": "[parameters('vnetLocation')]",
      "tags": "[parameters('tagValues')]",
      "properties": {
        "privateLinkServiceConnections": "[if(equals(parameters('privateEndpointType'), 'AutoApproval'), variables('filePEConnections'), json('null'))]",
        "manualPrivateLinkServiceConnections": "[if(equals(parameters('privateEndpointType'), 'ManualApproval'), variables('filePEConnections'), json('null'))]",
        "subnet": {
          "id": "[variables('subnetPEId')]"
        }
      }
    },
      {
      "condition": "[variables('enablePE')]",
      "type": "Microsoft.Network/privateEndpoints",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('subnetPEName'))]",
        "[resourceId('Microsoft.KeyVault/vaults', parameters('keyVaultName'))]"
      ],
      "apiVersion": "2022-05-01",
      "name": "[format('{0}-PrivateEndpoint-kv', parameters('workspaceName'))]",
      "location": "[parameters('vnetLocation')]",
      "tags": "[parameters('tagValues')]",
      "properties": {
        "privateLinkServiceConnections": "[if(equals(parameters('privateEndpointType'), 'AutoApproval'), variables('KVPEConnections'), json('null'))]",
        "manualPrivateLinkServiceConnections": "[if(equals(parameters('privateEndpointType'), 'ManualApproval'), variables('KVPEConnections'), json('null'))]",
        "subnet": {
          "id": "[variables('subnetPEId')]"
        }
      }
    },
    {
      "condition": "[variables('enablePE')]",
      "type": "Microsoft.Network/privateEndpoints",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('subnetPEName'))]",
        "[resourceId('Microsoft.CognitiveServices/accounts', parameters('cognitiveServiceName'))]"
      ],
      "apiVersion": "2022-05-01",
      "name": "[format('{0}-PrivateEndpoint-aoai', parameters('workspaceName'))]",
      "location": "[parameters('vnetLocation')]",
      "tags": "[parameters('tagValues')]",
      "properties": {
        "privateLinkServiceConnections": "[if(equals(parameters('privateEndpointType'), 'AutoApproval'), variables('AOAIConnections'), json('null'))]",
        "manualPrivateLinkServiceConnections": "[if(equals(parameters('privateEndpointType'), 'ManualApproval'), variables('AOAIConnections'), json('null'))]",
        "subnet": {
          "id": "[variables('subnetPEId')]"
        }
      }
    },
    {
      "condition": "[equals(parameters('privateEndpointType'), 'AutoApproval')]",
      "type": "Microsoft.Network/privateDnsZones",
      "apiVersion": "2020-06-01",
      "name": "[variables('privateDnsZoneName')[toLower(environment().name)]]",
      "location": "global",
      "tags": "[parameters('tagValues')]",
      "properties": {},
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateEndpoints', format('{0}-PrivateEndpoint', parameters('workspaceName')))]"
      ]
    },
    {
      "condition": "[equals(parameters('privateEndpointType'), 'AutoApproval')]",
      "type": "Microsoft.Network/privateDnsZones",
      "apiVersion": "2020-06-01",
      "name": "[variables('privateAznbDnsZoneName')[toLower(environment().name)]]",
      "location": "global",
      "tags": "[parameters('tagValues')]",
      "properties": {},
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateEndpoints', format('{0}-PrivateEndpoint', parameters('workspaceName')))]"
      ]
    },
     {
      "condition": "[equals(parameters('privateEndpointType'), 'AutoApproval')]",
      "type": "Microsoft.Network/privateDnsZones",
      "apiVersion": "2020-06-01",
      "name": "[variables('privateBlobDnsZoneName')[toLower(environment().name)]]",
      "location": "global",
      "tags": "[parameters('tagValues')]",
      "properties": {},
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateEndpoints', format('{0}-PrivateEndpoint-blob', parameters('workspaceName')))]"
      ]
    },
     {
      "condition": "[equals(parameters('privateEndpointType'), 'AutoApproval')]",
      "type": "Microsoft.Network/privateDnsZones",
      "apiVersion": "2020-06-01",
      "name": "[variables('privateFileDnsZoneName')[toLower(environment().name)]]",
      "location": "global",
      "tags": "[parameters('tagValues')]",
      "properties": {},
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateEndpoints', format('{0}-PrivateEndpoint-file', parameters('workspaceName')))]"
      ]
    },
     {
      "condition": "[equals(parameters('privateEndpointType'), 'AutoApproval')]",
      "type": "Microsoft.Network/privateDnsZones",
      "apiVersion": "2020-06-01",
      "name": "[variables('privateKVDnsZoneName')[toLower(environment().name)]]",
      "location": "global",
      "tags": "[parameters('tagValues')]",
      "properties": {},
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateEndpoints', format('{0}-PrivateEndpoint-kv', parameters('workspaceName')))]"
      ]
    },
    {
      "condition": "[equals(parameters('privateEndpointType'), 'AutoApproval')]",
      "type": "Microsoft.Network/privateDnsZones",
      "apiVersion": "2020-06-01",
      "name": "[variables('privateAOAIDnsZoneName')[toLower(environment().name)]]",
      "location": "global",
      "tags": "[parameters('tagValues')]",
      "properties": {},
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateEndpoints', format('{0}-PrivateEndpoint-aoai', parameters('workspaceName')))]"
      ]
    },
    {
      "condition": "[equals(parameters('privateEndpointType'), 'AutoApproval')]",
      "type": "Microsoft.Network/privateDnsZones/virtualNetworkLinks",
      "apiVersion": "2020-06-01",
      "name": "[format('{0}/{1}', variables('privateDnsZoneName')[toLower(environment().name)], uniqueString(variables('vnetId')))]",
      "location": "global",
      "tags": "[parameters('tagValues')]",
      "properties": {
        "virtualNetwork": {
          "id": "[variables('vnetId')]"
        },
        "registrationEnabled": false
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateDnsZones', variables('privateDnsZoneName')[toLower(environment().name)])]",
        "[resourceId('Microsoft.Network/privateEndpoints', format('{0}-PrivateEndpoint', parameters('workspaceName')))]"
      ]
    },
    {
      "condition": "[equals(parameters('privateEndpointType'), 'AutoApproval')]",
      "type": "Microsoft.Network/privateDnsZones/virtualNetworkLinks",
      "apiVersion": "2020-06-01",
      "name": "[format('{0}/{1}', variables('privateAznbDnsZoneName')[toLower(environment().name)], uniqueString(variables('vnetId')))]",
      "location": "global",
      "tags": "[parameters('tagValues')]",
      "properties": {
        "virtualNetwork": {
          "id": "[variables('vnetId')]"
        },
        "registrationEnabled": false
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateDnsZones', variables('privateAznbDnsZoneName')[toLower(environment().name)])]",
        "[resourceId('Microsoft.Network/privateEndpoints', format('{0}-PrivateEndpoint', parameters('workspaceName')))]"
      ]
    },
    {
      "condition": "[equals(parameters('privateEndpointType'), 'AutoApproval')]",
      "type": "Microsoft.Network/privateDnsZones/virtualNetworkLinks",
      "apiVersion": "2020-06-01",
      "name": "[format('{0}/{1}', variables('privateBlobDnsZoneName')[toLower(environment().name)], uniqueString(variables('vnetId')))]",
      "location": "global",
      "tags": "[parameters('tagValues')]",
      "properties": {
        "virtualNetwork": {
          "id": "[variables('vnetId')]"
        },
        "registrationEnabled": false
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateDnsZones', variables('privateBlobDnsZoneName')[toLower(environment().name)])]",
        "[resourceId('Microsoft.Network/privateEndpoints', format('{0}-PrivateEndpoint-blob', parameters('workspaceName')))]"
      ]
    },
    {
      "condition": "[equals(parameters('privateEndpointType'), 'AutoApproval')]",
      "type": "Microsoft.Network/privateDnsZones/virtualNetworkLinks",
      "apiVersion": "2020-06-01",
      "name": "[format('{0}/{1}', variables('privateFileDnsZoneName')[toLower(environment().name)], uniqueString(variables('vnetId')))]",
      "location": "global",
      "tags": "[parameters('tagValues')]",
      "properties": {
        "virtualNetwork": {
          "id": "[variables('vnetId')]"
        },
        "registrationEnabled": false
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateDnsZones', variables('privateFileDnsZoneName')[toLower(environment().name)])]",
        "[resourceId('Microsoft.Network/privateEndpoints', format('{0}-PrivateEndpoint-file', parameters('workspaceName')))]"
      ]
    },
    {
      "condition": "[equals(parameters('privateEndpointType'), 'AutoApproval')]",
      "type": "Microsoft.Network/privateDnsZones/virtualNetworkLinks",
      "apiVersion": "2020-06-01",
      "name": "[format('{0}/{1}', variables('privateKVDnsZoneName')[toLower(environment().name)], uniqueString(variables('vnetId')))]",
      "location": "global",
      "tags": "[parameters('tagValues')]",
      "properties": {
        "virtualNetwork": {
          "id": "[variables('vnetId')]"
        },
        "registrationEnabled": false
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateDnsZones', variables('privateKVDnsZoneName')[toLower(environment().name)])]",
        "[resourceId('Microsoft.Network/privateEndpoints', format('{0}-PrivateEndpoint-kv', parameters('workspaceName')))]"
      ]
    },
    {
      "condition": "[equals(parameters('privateEndpointType'), 'AutoApproval')]",
      "type": "Microsoft.Network/privateDnsZones/virtualNetworkLinks",
      "apiVersion": "2020-06-01",
      "name": "[format('{0}/{1}', variables('privateAOAIDnsZoneName')[toLower(environment().name)], uniqueString(variables('vnetId')))]",
      "location": "global",
      "tags": "[parameters('tagValues')]",
      "properties": {
        "virtualNetwork": {
          "id": "[variables('vnetId')]"
        },
        "registrationEnabled": false
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateDnsZones', variables('privateAOAIDnsZoneName')[toLower(environment().name)])]",
        "[resourceId('Microsoft.Network/privateEndpoints', format('{0}-PrivateEndpoint-aoai', parameters('workspaceName')))]"
      ]
    },
    {
      "condition": "[equals(parameters('privateEndpointType'), 'AutoApproval')]",
      "type": "Microsoft.Network/privateEndpoints/privateDnsZoneGroups",
      "apiVersion": "2022-05-01",
      "name": "[format('{0}/{1}', format('{0}-PrivateEndpoint', parameters('workspaceName')), 'default')]",
      "properties": {
        "privateDnsZoneConfigs": [
          {
            "name": "privatelink-api-azureml-ms",
            "properties": {
              "privateDnsZoneId": "[resourceId('Microsoft.Network/privateDnsZones', variables('privateDnsZoneName')[toLower(environment().name)])]"
            }
          },
          {
            "name": "privatelink-notebooks-azure-net",
            "properties": {
              "privateDnsZoneId": "[resourceId('Microsoft.Network/privateDnsZones', variables('privateAznbDnsZoneName')[toLower(environment().name)])]"
            }
          }        
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateDnsZones', variables('privateAznbDnsZoneName')[toLower(environment().name)])]",
        "[resourceId('Microsoft.Network/privateDnsZones', variables('privateDnsZoneName')[toLower(environment().name)])]",
        "[resourceId('Microsoft.Network/privateEndpoints', format('{0}-PrivateEndpoint', parameters('workspaceName')))]",
        "[resourceId('Microsoft.Network/privateEndpoints', format('{0}-PrivateEndpoint-blob', parameters('workspaceName')))]"
      ]
    },
    {
      "condition": "[equals(parameters('privateEndpointType'), 'AutoApproval')]",
      "type": "Microsoft.Network/privateEndpoints/privateDnsZoneGroups",
      "apiVersion": "2022-05-01",
      "name": "[format('{0}/{1}', format('{0}-PrivateEndpoint-blob', parameters('workspaceName')), 'default')]",
      "properties": {
        "privateDnsZoneConfigs": [
          {
            "name": "privatelink-blob-core-windows-net",
            "properties": {
              "privateDnsZoneId": "[resourceId('Microsoft.Network/privateDnsZones', variables('privateBlobDnsZoneName')[toLower(environment().name)])]"
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateDnsZones', variables('privateBlobDnsZoneName')[toLower(environment().name)])]",
        "[resourceId('Microsoft.Network/privateEndpoints', format('{0}-PrivateEndpoint-blob', parameters('workspaceName')))]"
      ]
    },
    {
      "condition": "[equals(parameters('privateEndpointType'), 'AutoApproval')]",
      "type": "Microsoft.Network/privateEndpoints/privateDnsZoneGroups",
      "apiVersion": "2022-05-01",
      "name": "[format('{0}/{1}', format('{0}-PrivateEndpoint-file', parameters('workspaceName')), 'default')]",
      "properties": {
        "privateDnsZoneConfigs": [
          {
            "name": "privatelink-file-core-windows-net",
            "properties": {
              "privateDnsZoneId": "[resourceId('Microsoft.Network/privateDnsZones', variables('privateFileDnsZoneName')[toLower(environment().name)])]"
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateDnsZones', variables('privateFileDnsZoneName')[toLower(environment().name)])]",
        "[resourceId('Microsoft.Network/privateEndpoints', format('{0}-PrivateEndpoint-file', parameters('workspaceName')))]"
      ]
    },
    {
      "condition": "[equals(parameters('privateEndpointType'), 'AutoApproval')]",
      "type": "Microsoft.Network/privateEndpoints/privateDnsZoneGroups",
      "apiVersion": "2022-05-01",
      "name": "[format('{0}/{1}', format('{0}-PrivateEndpoint-kv', parameters('workspaceName')), 'default')]",
      "properties": {
        "privateDnsZoneConfigs": [
          {
            "name": "privatelink-vaultcore-windows-net",
            "properties": {
              "privateDnsZoneId": "[resourceId('Microsoft.Network/privateDnsZones', variables('privateKVDnsZoneName')[toLower(environment().name)])]"
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateDnsZones', variables('privateKVDnsZoneName')[toLower(environment().name)])]",
        "[resourceId('Microsoft.Network/privateEndpoints', format('{0}-PrivateEndpoint-kv', parameters('workspaceName')))]"
      ]
    },
    {
      "condition": "[equals(parameters('privateEndpointType'), 'AutoApproval')]",
      "type": "Microsoft.Network/privateEndpoints/privateDnsZoneGroups",
      "apiVersion": "2022-05-01",
      "name": "[format('{0}/{1}', format('{0}-PrivateEndpoint-aoai', parameters('workspaceName')), 'default')]",
      "properties": {
        "privateDnsZoneConfigs": [
          {
            "name": "privatelink-openai-azure-com",
            "properties": {
              "privateDnsZoneId": "[resourceId('Microsoft.Network/privateDnsZones', variables('privateAOAIDnsZoneName')[toLower(environment().name)])]"
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateDnsZones', variables('privateAOAIDnsZoneName')[toLower(environment().name)])]",
        "[resourceId('Microsoft.Network/privateEndpoints', format('{0}-PrivateEndpoint-aoai', parameters('workspaceName')))]"
      ]
    },
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2021-04-01",
      "name": "nestedTemplate",
      "resourceGroup": "[parameters('hubVNetResourceGroupName')]",
      "properties": {
        "mode": "Incremental",
        "parameters": {
          "vnetName": { 
            "value" : "[parameters('vnetName')]"
          },
          "vnetResourceGroupName": {
            "value":"[parameters('vnetResourceGroupName')]"
          },
          "hubVNetName": {
            "value": "[parameters('hubVNetName')]"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "parameters": {
            "vnetName": { 
              "type" : "string"
            },
            "vnetResourceGroupName": {
              "type" : "string"
            },
            "hubVNetName": {
              "type": "string"
            }
          },
          "variables": {},
          "resources": [
            {
              "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
              "apiVersion": "2020-05-01",
              "name": "[format('{0}/{1}', parameters('hubVNetName'), format('hub-to-{0}', parameters('vnetName')))]",        
              "properties": {
                "allowVirtualNetworkAccess": true,
                "allowForwardedTraffic": false,
                "allowGatewayTransit": false,
                "useRemoteGateways": false,
                "remoteVirtualNetwork": {
                  "id": "[resourceId(parameters('vnetResourceGroupName'), 'Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
                }
              }
            }
          ]
        }
      },
      "dependsOn": [
        "[resourceId(parameters('vnetResourceGroupName'), 'Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
      ]
    }
  ]
}
